--- a/lib/styles/components/space.css
+++ b/lib/styles/components/space.css
@@ -21,7 +21,7 @@
 }
 
 .spl-space--focused {
-  background: var(--spl-gradient);
+  border: 1px solid var(--orange);
   animation: spl-space-focusing 160ms var(--spl-transition-easing);
 }
 
@@ -40,16 +40,12 @@
 .spl-space__inner {
   flex: 0 0 12px;
   height: 12px;
-  border: 3px solid transparent;
   border-radius: inherit;
   background-color: var(--spl-main-alt);
 }
 
 .spl-space--focused .spl-space__inner {
-  flex: 0 0 18px;
-  height: 18px;
   background: var(--spl-gradient);
-  border: 4px solid var(--spl-main);
 }
 
 .spl-space--fullscreen .spl-space__inner {
@@ -76,14 +72,13 @@
   position: absolute;
   top: 50%;
   left: calc(100% - 6px);
-  padding: 3px 7px;
+  padding: 3px 8px;
   font-size: calc(var(--spl-font-size) - 1px);
   background: var(--spl-gradient);
-  border: 2px solid var(--spl-main);
   border-radius: var(--spl-item-radius);
   opacity: 0;
-  transform: translateY(-50%);
-  transition: opacity 160ms var(--spl-transition-easing);
+  transform: translate(-8px, -50%) scale(0.8);
+  transition: opacity 160ms var(--spl-transition-easing), transform 160ms var(--spl-transition-easing);
   pointer-events: none;
   touch-action: none;
   z-index: 1;
@@ -91,4 +86,5 @@
 
 .spl-space:hover .spl-space__label {
   opacity: 1;
+  transform: translateY(-50%);
 }
