--- a/lib/styles/index.css
+++ b/lib/styles/index.css
@@ -4,4 +4,5 @@
 @import './components/date-time.css';
 @import './components/network.css';
 @import './components/process.css';
+@import './components/sound.css';
 @import './components/space.css';
