--- a/lib/styles/index.css
+++ b/lib/styles/index.css
@@ -6,3 +6,4 @@
 @import './components/process.css';
 @import './components/sound.css';
 @import './components/space.css';
+@import './components/widget.css';
