--- a/lib/styles/components/space.css
+++ b/lib/styles/components/space.css
@@ -34,14 +34,14 @@
 .spl-space--fullscreen {
   width: 16px;
   height: 16px;
-  background-color: var(--spl-main-alt);
+  background-color: var(--spl-foreground);
 }
 
 .spl-space__inner {
   flex: 0 0 12px;
   height: 12px;
   border-radius: inherit;
-  background-color: var(--spl-main-alt);
+  background-color: var(--spl-foreground);
 }
 
 .spl-space--focused .spl-space__inner {
@@ -54,7 +54,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--spl-main-alt);
+  background-color: var(--spl-foreground);
   border: 1px dashed var(--spl-main);
 }
 
@@ -65,7 +65,7 @@
 
 .spl-space--empty .spl-space__inner {
   background-color: transparent;
-  border: 1px solid var(--spl-main-alt);
+  border: 1px solid var(--spl-foreground);
 }
 
 .spl-space__label {
